multi-cluster-blue-green/local-cluster/cafe/nonsecure/route-mocha-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "openshift-4-15", "serviceName":
          "mocha-svc", "namespace": "default", "port": 8080 }]'
    # you can define either service port or target port in the port value
  labels:
    f5type: systest
  name: cafe-mocha-edge
  namespace: default
spec:
  host: cafe.example.com
  path: "/mocha"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mocha-svc
